updating md files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -192,6 +192,34 @@ jobs:
             LANGCHAIN_ENDPOINT=${{ secrets.LANGCHAIN_ENDPOINT }}
             LANGCHAIN_API_KEY=${{ secrets.LANGCHAIN_API_KEY }}
             LANGCHAIN_PROJECT=${{ secrets.LANGCHAIN_PROJECT }}
+            AI_SEARCH_KEY=${{ secrets.AI_SEARCH_KEY }}
+            AI_SEARCH_ENDPOINT=${{ secrets.AI_SEARCH_ENDPOINT }}
+            AI_SEARCH_INDEX=${{ secrets.AI_SEARCH_INDEX }}
+            AI_SEARCH_VECTOR_SIZE=${{ secrets.AI_SEARCH_VECTOR_SIZE }}
+            AI_SEARCH_K=${{ secrets.AI_SEARCH_K }}
+            AI_SEARCH_SCORE_THRESHOLD=${{ secrets.AI_SEARCH_SCORE_THRESHOLD }}
+            AI_SEARCH_TOP_K=${{ secrets.AI_SEARCH_TOP_K }}
+            AI_SEARCH_TOP_P=${{ secrets.AI_SEARCH_TOP_P }}
+            AI_SEARCH_MAX_TOKENS=${{ secrets.AI_SEARCH_MAX_TOKENS }}
+            AI_SEARCH_TEMPERATURE=${{ secrets.AI_SEARCH_TEMPERATURE }}
+            AI_SEARCH_FREQUENCY_PENALTY=${{ secrets.AI_SEARCH_FREQUENCY_PENALTY }}
+            AI_SEARCH_PRESENCE_PENALTY=${{ secrets.AI_SEARCH_PRESENCE_PENALTY }}
+            AI_SEARCH_STOP=${{ secrets.AI_SEARCH_STOP }}
+            AI_SEARCH_STREAM=${{ secrets.AI_SEARCH_STREAM }}
+            AI_SEARCH_VERBOSE=${{ secrets.AI_SEARCH_VERBOSE }}
+            AI_SEARCH_ENGINE=${{ secrets.AI_SEARCH_ENGINE }}
+            AI_SEARCH_PROMPT=${{ secrets.AI_SEARCH_PROMPT }}
+            AI_SEARCH_PROMPT_TEMPLATE=${{ secrets.AI_SEARCH_PROMPT_TEMPLATE }}
+            AI_SEARCH_PROMPT_PREFIX=${{ secrets.AI_SEARCH_PROMPT_PREFIX }}
+            AI_SEARCH_PROMPT_SUFFIX=${{ secrets.AI_SEARCH_PROMPT_SUFFIX }}
+            AI_SEARCH_PROMPT_INPUT_VARIABLES=${{ secrets.AI_SEARCH_PROMPT_INPUT_VARIABLES }}
+            AI_SEARCH_PROMPT_OUTPUT_PARSER=${{ secrets.AI_SEARCH_PROMPT_OUTPUT_PARSER }}
+            AI_SEARCH_PROMPT_MEMORY=${{ secrets.AI_SEARCH_PROMPT_MEMORY }}
+            AI_SEARCH_PROMPT_CHAT_HISTORY=${{ secrets.AI_SEARCH_PROMPT_CHAT_HISTORY }}
+            AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY=${{ secrets.AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY }}
+            AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY_INPUT_KEY=${{ secrets.AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY_INPUT_KEY }}
+            AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY_OUTPUT_KEY=${{ secrets.AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY_OUTPUT_KEY }}
+            AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY_OUTPUT_PARSER=${{ secrets.AI_SEARCH_PROMPT_CHAT_MESSAGE_HISTORY_OUTPUT_PARSER }}
             
             AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
